# drivers-genset_whisperpower_ddc

./: CMakeLists.txt  README.md  manifest.xml
src/: CMakeLists.txt  ControlCommand.hpp  Dummy.cpp  Dummy.hpp  ExportParameters.cpp  ExportParameters.hpp  FixedRPM.cpp  FixedRPM.hpp  FixedRPMMaster.cpp  FixedRPMMaster.hpp  Frame.hpp  GeneratorModel.cpp  GeneratorModel.hpp  GeneratorState.cpp  GeneratorState.hpp  GeneratorStatus.hpp  Main.cpp  RunTimeState.cpp  RunTimeState.hpp  RuntimeState.cpp  RuntimeState.hpp  VariableSpeed.cpp  VariableSpeed.hpp  VariableSpeedMaster.cpp  VariableSpeedMaster.hpp
test/: CMakeLists.txt  test_Dummy.cpp  test_FixedRPM.cpp  test_FixedRPMMaster.cpp  test_GeneratorState.cpp  test_VariableSpeed.cpp  test_VariableSpeedMaster.cpp  workspace.code-workspace
